--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="charisma_label">Charisma</string>
     <string name="equipment_label">Inventory and Equipment</string>
     <string name="roll_stats_button">Roll For Stats</string>
+    <string name="menu_create_character">Create New Character</string>
 </resources>
